# simple-encryption

./: README.md  pyproject.toml
simple_encryption/: __init__.py  main.py
